--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,31 +2,28 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Anne Tumlin
     - name: Date of Birth
-      value: 14th March 1879
+      value: 28th November 2000
     - name: Languages
-      value: English, German
+      value: English
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+      institution: Vanderbilt University, Nashville, TN
+      year: 
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
+        - title:
           contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+            
+    - title: Bachelor of Science in Computer Science
+      institution: University of South Carolina, Columbia, SC
+      year: 2019-2023
       description:
-        - Description 1.
-        - Description 2.
+        - South Carolina Honors College - McNair Scholar.
+        - Magna Cum Laude.
 
 - title: Experience
   type: time_table
